<resources>
    <string name="app_name" translatable="false">Hawk</string>

    <!--LoginMutation.graphql Activity-->
    <!--Sign In-->
    <string name="et_email_hint">Email</string>
    <string name="et_password_hint">Password</string>
    <string name="login_sign_in">Login</string>
    <string name="login_sing_up">Sign Up</string>
    <string name="sign_up_dialog_title">Information.</string>
    <string name="sign_up_dialog_message">You receive password on email.</string>
    <string name="button_name_ok">OK</string>
    <string name="iv_description_background_of_sign_in">background_of_sign_in</string>
    <string name="sign_in_title">Login</string>
    <string name="sign_up_button">Sign up</string>
    <string name="register_button">Register</string>
    <string name="sign_in_recover_password">Recover password</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_email_address">Email address</string>
    <string name="app_name_hawk">Hawk</string>
    <string name="time_of_quality">Time for quality</string>
    <string name="made_by_codex">Made by CodeX</string>
    <string name="sign_up_title">Sign up</string>
    <string name="back">Back</string>
</resources>
