<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.login.LoginActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hawk_logo_center_image"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="28dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@+id/cardForm"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed">

                    <TextView
                            android:id="@+id/tv_title_sign_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/app_name_hawk"
                            android:textColor="@android:color/white"
                            android:textSize="29sp"
                            android:textStyle="bold"
                            android:typeface="normal"/>

                    <TextView
                            android:id="@+id/tv_subtitle_sign_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/time_of_quality"
                            android:textColor="@color/very_light_blue_60"/>
                </LinearLayout>

                <FrameLayout
                        android:id="@+id/cardForm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/barrier"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                        tools:layout="@layout/fragment_sign_in_form"/>

                <TextView
                        android:id="@+id/tv_copyright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/made_by_codex"
                        android:textColor="#dbe6ff"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                        app:layout_constraintStart_toStartOf="@+id/linearLayout2"/>

                <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/barrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="top"
                        app:constraint_referenced_ids="tv_copyright"
                        tools:layout_editor_absoluteX="15dp"
                        tools:layout_editor_absoluteY="572dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </ScrollView>

</FrameLayout>